@@ -852,17 +852,17 @@
 1816,EVENT_GOURD,Gourd,Gourd,12,1000,0,0,0,1,1,2,100,99,1,1,1,1,1,1,0,0,1,0,20,0x40,2000,96,96,96,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 
 //Guessed mobs start here
-1829,G_KNIGHT_GUARDIAN,Sword Guardian,Sword Master,86,152533,0,155013,122604,2,7590,9140,55,60,110,90,60,3,125,86,10,12,2,7,80,0x37B5,150,76,384,288,0,0,0,0,0,0,0,0,7069,3000,1370,15,1163,20,1168,10,0,0,0,0,0,0,0,0,0,0,0,0
-1830,G_SOLDIER_GUARDIAN,Bow Guardian,Bow Master,80,80404,0,50149,2306,12,1840,2520,35,60,85,126,40,44,163,80,10,12,2,7,80,0x37B5,150,76,384,288,0,0,0,0,0,0,0,0,7069,3000,1723,10,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-1831,SALAMANDER,Salamander,Salamander,91,97934,0,72000,55000,2,7590,10680,50,75,71,91,65,18,102,91,10,12,2,0,63,0x37B5,170,76,384,288,0,0,0,0,0,0,0,0,7097,3000,994,100,716,500,1370,5,2621,1,2680,1,0,0,0,0,0,0,0,0
-1832,IFRIT,Ifrit,Ifrit,99,7700000,0,3154321,3114520,3,13530,17000,40,80,100,108,25,190,147,99,10,12,2,0,83,0x37B5,120,76,200,288,1577160,10000,603,5500,617,5000,994,5000,994,3000,2345,80,1133,80,1473,80,1471,80,2678,60,2677,60,2679,60,0,0,0,0
-1833,KASA,Kasa,Kasa,85,80375,0,49000,38000,2,2000,6000,30,80,51,105,31,250,90,85,10,12,2,0,63,0x37B5,150,872,600,288,0,0,0,0,0,0,0,0,7097,3000,7122,2000,0,0,2344,3,2622,1,2680,1,0,0,0,0,0,0,0,0
-1834,G_SALAMANDER,Salamander,Salamander,91,97934,0,0,0,2,7590,10680,50,75,71,91,65,18,102,91,10,12,2,0,63,0x37B5,170,76,384,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-1835,G_KASA,Kasa,Kasa,85,80375,0,0,0,2,2000,6000,30,80,51,105,31,250,90,85,10,12,2,0,63,0x37B5,150,872,600,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-1836,MAGMARING,Magmaring,Magmaring,40,5300,0,2110,1910,1,550,700,40,65,30,55,25,12,80,40,10,12,0,0,43,0x83,300,384,672,432,0,0,0,0,0,0,0,0,7097,1000,7096,1000,12018,100,757,100,0,0,0,0,0,0,0,0,0,0,0,0
-1837,FIRE_IMP,Fire Imp,Fire Imp,76,46430,0,25200,11077,1,1059,1509,30,75,30,96,30,180,96,76,10,12,0,6,83,0x3395,120,76,384,288,0,0,0,0,0,0,0,0,7097,3000,7122,2000,13303,5,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-1838,KNOCKER,Knocker,Knocker,50,7755,0,2202,4023,1,889,990,30,70,25,58,28,36,64,105,10,12,0,6,22,0x191,200,576,384,288,0,0,0,0,0,0,0,0,997,30,1003,150,1040,5500,2286,1,2209,10,1001,100,5009,1,0,0,0,0,0,0
-1839,BYORGUE,Byorgue,Byorgue,86,38133,0,0,0,3,700,1500,30,60,36,126,12,30,146,86,10,12,1,7,20,0x37B5,150,76,384,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+1829,G_KNIGHT_GUARDIAN,Sword Guardian,Sword Master,86,152533,0,155013,122604,2,7590,9140,60,33,1,40,54,65,125,65,10,12,2,7,80,0x37B5,150,76,384,288,0,0,0,0,0,0,0,0,7069,3000,1370,15,1163,20,1168,10,0,0,0,0,0,0,0,0,0,0,0,0
+1830,G_SOLDIER_GUARDIAN,Bow Guardian,Bow Master,80,80404,0,50149,23006,12,1840,2520,40,62,1,80,33,90,165,55,10,12,2,7,80,0x37B5,150,76,384,288,0,0,0,0,0,0,0,0,7069,3000,1723,10,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+1831,SALAMANDER,Salamander,Salamander,91,97934,0,72000,55000,2,7590,10860,65,50,1,55,44,45,180,25,10,12,2,0,63,0x37B5,170,76,384,288,0,0,0,0,0,0,0,0,7097,3000,994,100,716,500,1370,5,2621,1,2680,1,0,0,0,0,0,0,0,0
+1832,IFRIT,Ifrit,Ifrit,99,7700000,0,3154321,3114520,3,13530,17000,40,50,1,180,25,190,199,50,10,12,2,0,83,0x37B5,120,76,200,288,1577160,10000,603,5500,617,5000,994,5000,994,3000,2345,80,1133,80,1473,80,1471,80,2678,60,2677,60,2679,60,0,0,0,0
+1833,KASA,Kasa,Kasa,85,80375,0,49000,38000,2,3030,3500,23,70,1,110,31,250,140,30,10,12,2,0,63,0x37B5,150,872,600,288,0,0,0,0,0,0,0,0,7097,3000,7122,2000,0,0,2344,3,2622,1,2680,1,0,0,0,0,0,0,0,0
+1834,G_SALAMANDER,Salamander,Salamander,91,97934,0,0,0,2,7590,10860,65,50,1,55,44,45,180,25,10,12,2,0,63,0x37B5,170,76,384,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+1835,G_KASA,Kasa,Kasa,85,80375,0,0,0,2,3030,3500,23,70,1,110,31,250,140,30,10,12,2,0,63,0x37B5,150,872,600,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+1836,MAGMARING,Magmaring,Magmaring,40,5300,0,2110,1910,1,550,700,25,24,1,60,30,10,60,17,10,12,0,0,43,0x83,300,384,672,432,0,0,0,0,0,0,0,0,7097,1000,7096,1000,12018,100,757,100,0,0,0,0,0,0,0,0,0,0,0,0
+1837,FIRE_IMP,Fire Imp,Fire Imp,76,46430,0,25200,11077,1,1059,1509,27,50,1,76,30,180,99,10,10,12,0,6,83,0x3395,120,76,384,288,0,0,0,0,0,0,0,0,7097,3000,7122,2000,13303,5,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+1838,KNOCKER,Knocker,Knocker,50,7755,0,2202,4023,1,889,990,28,50,1,44,50,62,65,60,10,12,0,6,22,0x191,200,576,384,288,0,0,0,0,0,0,0,0,997,30,1003,150,1040,5500,2286,1,2209,10,1001,100,5009,1,0,0,0,0,0,0
+1839,BYORGUE,Byorgue,Byorgue,86,38133,0,19000,9500,3,1340,2590,20,13,1,80,12,30,70,10,10,12,1,7,20,0x37B5,150,76,384,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 1840,GOLDEN_SAVAGE,Golden Savage,Golden Savage,99,5000,0,0,0,1,0,0,0,0,0,0,1,50,0,0,10,12,2,2,42,0x91,150,1960,960,384,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 
 1864,ZOMBIE_SLAUGHTER,Zombie Slaughter,Zombie Slaughter,77,43000,0,12000,8500,1,800,855,35,45,1,30,50,1,75,35,10,12,1,1,69,0x3695,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
